// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconCard AcrylicIconBlockCard 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "borderRadius": 16,
        "paddingBottom": 27,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 20,
        "width": 150,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#158CFB",
          "height": 50,
          "width": 50,
        },
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 50,
            "display": "flex",
            "height": 50,
            "justifyContent": "center",
            "overflow": "hidden",
            "width": 50,
          },
          Object {},
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          Object {
            "height": 40,
            "width": 40,
          },
          false,
          null,
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            undefined,
            false,
            Object {
              "flex": 0,
              "height": 40,
              "width": 40,
            },
          ]
        }
        vbHeight={1024}
        vbWidth={1024}
      >
        <RNSVGPath
          d="M512 0C794.760533 0 1024 229.239467 1024 512S794.760533 1024 512 1024 0 794.760533 0 512 229.239467 0 512 0z m185.048178 327.0656a26.988089 26.988089 0 0 0-38.183822 38.183822 207.712711 207.712711 0 1 1-293.728712 0 26.988089 26.988089 0 1 0-38.183822-38.183822c-102.172444 102.1952-102.172444 267.901156 0 370.096356 102.1952 102.172444 267.901156 102.172444 370.096356 0 102.172444-102.1952 102.172444-267.901156 0-370.096356zM511.886222 227.555556a27.079111 27.079111 0 0 0-26.919822 24.302933l-0.136533 2.776178v196.152889a27.079111 27.079111 0 0 0 53.998933 2.776177l0.136533-2.776177v-196.152889a27.079111 27.079111 0 0 0-27.079111-27.079111z"
          fill={
            Array [
              0,
              1,
              1,
              1,
              1,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          propList={
            Array [
              "stroke",
              "strokeWidth",
              "fill",
            ]
          }
          stroke={
            Array [
              0,
              1,
              1,
              1,
              1,
            ]
          }
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
        />
      </RNSVGSvgView>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row",
        "marginBottom": 3,
        "marginTop": 20,
      }
    }
  >
    <Text
      accessible={true}
      align={null}
      allowFontScaling={false}
      color="rgba(0, 0, 0, 0.9)"
      ellipsizeMode="tail"
      size={32}
      style={
        Array [
          false,
          Array [
            false,
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "rgba(0, 0, 0, 0.9)",
                "fontSize": 32,
                "fontWeight": "600",
              },
              Array [
                Object {
                  "lineHeight": 44,
                },
                undefined,
              ],
            ],
          ],
        ]
      }
      text="42"
      type={null}
      weight={600}
    >
      42
    </Text>
    <Text
      accessible={true}
      align={null}
      allowFontScaling={false}
      color="rgba(0, 0, 0, 0.5)"
      ellipsizeMode="tail"
      size={16}
      style={
        Array [
          false,
          Array [
            false,
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "rgba(0, 0, 0, 0.5)",
                "fontSize": 16,
                "fontWeight": "400",
              },
              Array [
                Object {
                  "lineHeight": 22,
                },
                undefined,
              ],
            ],
          ],
        ]
      }
      text="°C"
      type={null}
      weight={400}
    >
      °C
    </Text>
  </View>
  <Text
    accessible={true}
    align={null}
    allowFontScaling={false}
    color="rgba(0, 0, 0, 0.5)"
    ellipsizeMode="tail"
    size={14}
    style={
      Array [
        false,
        Array [
          false,
          Array [
            Object {
              "backgroundColor": "transparent",
              "color": "rgba(0, 0, 0, 0.5)",
              "fontSize": 14,
              "fontWeight": "500",
            },
            Array [
              Object {
                "lineHeight": 19,
              },
              undefined,
            ],
          ],
        ],
      ]
    }
    text="Temp"
    type={null}
    weight={500}
  >
    Temp
  </Text>
</View>
`;

exports[`IconCard ClassicIconBlockCard 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "borderRadius": 14,
        "paddingBottom": 21,
        "paddingLeft": 16,
        "paddingRight": 21,
        "paddingTop": 16,
        "width": 175,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "flexDirection": "row",
        "marginBottom": 23,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#158CFB",
            "height": 50,
            "width": 50,
          },
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 50,
              "display": "flex",
              "height": 50,
              "justifyContent": "center",
              "overflow": "hidden",
              "width": 50,
            },
            Object {},
          ],
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
            Object {
              "height": 36,
              "width": 36,
            },
            false,
            null,
          ]
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              undefined,
              false,
              Object {
                "flex": 0,
                "height": 36,
                "width": 36,
              },
            ]
          }
          vbHeight={1024}
          vbWidth={1024}
        >
          <RNSVGPath
            d="M512 0C794.760533 0 1024 229.239467 1024 512S794.760533 1024 512 1024 0 794.760533 0 512 229.239467 0 512 0z m185.048178 327.0656a26.988089 26.988089 0 0 0-38.183822 38.183822 207.712711 207.712711 0 1 1-293.728712 0 26.988089 26.988089 0 1 0-38.183822-38.183822c-102.172444 102.1952-102.172444 267.901156 0 370.096356 102.1952 102.172444 267.901156 102.172444 370.096356 0 102.172444-102.1952 102.172444-267.901156 0-370.096356zM511.886222 227.555556a27.079111 27.079111 0 0 0-26.919822 24.302933l-0.136533 2.776178v196.152889a27.079111 27.079111 0 0 0 53.998933 2.776177l0.136533-2.776177v-196.152889a27.079111 27.079111 0 0 0-27.079111-27.079111z"
            fill={
              Array [
                0,
                1,
                1,
                1,
                1,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            propList={
              Array [
                "stroke",
                "strokeWidth",
                "fill",
              ]
            }
            stroke={
              Array [
                0,
                1,
                1,
                1,
                1,
              ]
            }
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
          />
        </RNSVGSvgView>
      </View>
    </View>
    <Text
      accessible={true}
      align={null}
      allowFontScaling={false}
      color="#3D3D3D"
      ellipsizeMode="tail"
      size={16}
      style={
        Array [
          false,
          Array [
            false,
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#3D3D3D",
                "fontSize": 16,
                "fontWeight": "400",
              },
              Array [
                Object {
                  "lineHeight": 24,
                  "marginLeft": 12,
                },
                undefined,
              ],
            ],
          ],
        ]
      }
      text="Temp"
      type={null}
      weight={400}
    >
      Temp
    </Text>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      accessible={true}
      align={null}
      allowFontScaling={false}
      color="#505050"
      ellipsizeMode="tail"
      size={24}
      style={
        Array [
          false,
          Array [
            false,
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#505050",
                "fontSize": 24,
                "fontWeight": "600",
              },
              Array [
                Object {
                  "lineHeight": 26,
                },
                undefined,
              ],
            ],
          ],
        ]
      }
      text="42"
      type={null}
      weight={600}
    >
      42
    </Text>
    <Text
      accessible={true}
      align={null}
      allowFontScaling={false}
      color="#505050"
      ellipsizeMode="tail"
      size={24}
      style={
        Array [
          false,
          Array [
            false,
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#505050",
                "fontSize": 24,
                "fontWeight": "600",
              },
              Array [
                Object {
                  "lineHeight": 26,
                },
                undefined,
              ],
            ],
          ],
        ]
      }
      text="%"
      type={null}
      weight={600}
    >
      %
    </Text>
  </View>
</View>
`;

exports[`IconCard NordicIconBlockCard 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "borderRadius": 16,
        "paddingBottom": 18,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 24,
        "width": 155,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#1082FE",
          "height": 48,
          "width": 48,
        },
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 12,
            "display": "flex",
            "height": 48,
            "justifyContent": "center",
            "overflow": "hidden",
            "width": 48,
          },
          Object {},
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          Object {
            "height": 21,
            "width": 21,
          },
          false,
          null,
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
            },
            undefined,
            false,
            Object {
              "flex": 0,
              "height": 21,
              "width": 21,
            },
          ]
        }
        vbHeight={1024}
        vbWidth={1024}
      >
        <RNSVGPath
          d="M512 0C794.760533 0 1024 229.239467 1024 512S794.760533 1024 512 1024 0 794.760533 0 512 229.239467 0 512 0z m185.048178 327.0656a26.988089 26.988089 0 0 0-38.183822 38.183822 207.712711 207.712711 0 1 1-293.728712 0 26.988089 26.988089 0 1 0-38.183822-38.183822c-102.172444 102.1952-102.172444 267.901156 0 370.096356 102.1952 102.172444 267.901156 102.172444 370.096356 0 102.172444-102.1952 102.172444-267.901156 0-370.096356zM511.886222 227.555556a27.079111 27.079111 0 0 0-26.919822 24.302933l-0.136533 2.776178v196.152889a27.079111 27.079111 0 0 0 53.998933 2.776177l0.136533-2.776177v-196.152889a27.079111 27.079111 0 0 0-27.079111-27.079111z"
          fill={
            Array [
              0,
              1,
              1,
              1,
              1,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
          opacity={1}
          propList={
            Array [
              "stroke",
              "strokeWidth",
              "fill",
            ]
          }
          stroke={
            Array [
              0,
              1,
              1,
              1,
              1,
            ]
          }
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth={1}
        />
      </RNSVGSvgView>
    </View>
  </View>
  <Text
    accessible={true}
    align={null}
    allowFontScaling={false}
    color="rgba(0, 0, 0, 0.9)"
    ellipsizeMode="tail"
    size={16}
    style={
      Array [
        false,
        Array [
          false,
          Array [
            Object {
              "backgroundColor": "transparent",
              "color": "rgba(0, 0, 0, 0.9)",
              "fontSize": 16,
              "fontWeight": "400",
            },
            Array [
              Object {
                "lineHeight": 22,
                "marginBottom": 4,
                "marginTop": 29,
              },
              undefined,
            ],
          ],
        ],
      ]
    }
    text="Temp"
    type={null}
    weight={400}
  >
    Temp
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      accessible={true}
      align={null}
      allowFontScaling={false}
      color="rgba(0, 0, 0, 0.5)"
      ellipsizeMode="tail"
      size={28}
      style={
        Array [
          false,
          Array [
            false,
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "rgba(0, 0, 0, 0.5)",
                "fontSize": 28,
                "fontWeight": "400",
              },
              Array [
                Object {
                  "lineHeight": 39,
                },
                undefined,
              ],
            ],
          ],
        ]
      }
      text="42"
      type={null}
      weight={400}
    >
      42
    </Text>
    <Text
      accessible={true}
      align={null}
      allowFontScaling={false}
      color="rgba(0, 0, 0, 0.5)"
      ellipsizeMode="tail"
      size={28}
      style={
        Array [
          false,
          Array [
            false,
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "rgba(0, 0, 0, 0.5)",
                "fontSize": 28,
                "fontWeight": "400",
              },
              Array [
                Object {
                  "lineHeight": 39,
                },
                undefined,
              ],
            ],
          ],
        ]
      }
      text="%"
      type={null}
      weight={400}
    >
      %
    </Text>
  </View>
</View>
`;
